# mate_counter

./: Cargo.toml  LICENSE
.sqlx/: query-948f58bab52905b84ed8ee4b39afc27f10617b9c5fee2cfefaae62e2beeb9220.json  query-b863e73bbf5add31ce20c5c206e6ec9a21659d482a67b514eb135cf69e0d40a6.json  query-e2a79f916eeb7ae04f14debe9bf8c83a1228239ae5b98eed911754706a45150f.json  query-fd49cef86500e0d59edba05cc21fc2038558150214f0a4166f189c5107d95350.json
frontend/: login.html  main.html
migrations/: 20250520195410_init.sql
src/: db.rs  files.rs  main.rs
