[package]
name = "mate_counter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
rocket = { version = "0.5.1", features = ["json"] }
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["sqlite"] }
tokio = { version = "1.45.0", features = ["full"] }
